--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <section class="nav--bg">
+    <section class="nav--bg" id="nav">
 <div class="navbar navbar-expand-md">
         <div class="container">
             <a href="" class="navbar-brand">
@@ -238,7 +238,7 @@
       <p class="col-md-4 mb-0 text-body-secondary fw-bold">© Viktor Vaskov, 2024 <a href="" class="up--arrow"><i class="bi bi-box-arrow-in-up h3 d-md-none"></i></a></p>
     </a>  
   
-      <a href="#hero" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+      <a href="#nav" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
         <i class="bi bi-box-arrow-in-up h2 d-none d-md-flex"></i>
       </a>
     </footer>
@@ -247,7 +247,9 @@
 </body>
 </html>
 
-<!--  <div class="container">
+
+<!--  Bullshit code
+<div class="container">
         <h2 class="text-center gap-1 px-4 py-2"> Contact me</h2>
         <div class="row">
           <div class="col">
